<resources>
    <string name="app_name">eventXpert</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location &#128205;</string>
    <string name="location_label">Location: </string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date </string>
    <string name="end_date_label">End Date: </string>
    <string name="end_time">End Time</string>
    <string name="description">Description </string>
    <string name="description_label">Description: </string>
    <string name="email_label">Email: </string>
    <string name="admin_label">Is Admin: </string>
    <string name="mastery_label">Mastery </string>
    <string name="points_label">Points </string>
    <string name="create_event_button">Create Event</string>
    <string name="edit_event_button">Edit Event</string>
    <string name="save_event_button">Save Event</string>
    <string name="check_in_event_button">Check In</string>
    <string name="register_event_button">Register</string>
    <string name="view_participant_button">View Participants</string>
    <string name="check_in_success">Successfully Checked In!</string>
    <string name="save_user_button">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="noEventsSignedUp">Signed up for events will show up here.\n</string>
    <string name="showAllEvents">Show All Events</string>
    <string name="edit_user_button">Edit User</string>
    <string name="no_events_found">No events were found</string>
    <string name="no_empty_search">Please enter a value to search</string>
    <string name="enter_search">Submit a search to see events</string>
    <string name="sort_events">Sort</string>
    <string name="noNotifications">No Notifications</string>
    <string name="noAdminEvents">You can not currently see any events here. \n Sign up for an event or create an event to see it here.</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_find_events">Find Events</string>
    <string name="nav_manage_events">Manage Events</string>
    <string name="nav_notifications">Notifications</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="sign_out">Log out of google account.</string>
    <string name="signed_out">Signed out</string>
    <string name="title_text">Sign in to eventXpert!</string>
    <string name="sign_out_page">Log Out</string>
    <string name="server_client_id">144706093403-f436erblgb9dhms2ahpr1abirjkoqj0a.apps.googleusercontent.com </string>
    <string name="upload_image">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_find_events">Find Events</string>
    <string name="title_activity_manage_events">Manage Events</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="title_activity_user_details">User Details</string>
    <string name="title_activity_registrant_info">Registrant Information</string>
    <string name="title_activity_upload_image">Upload Image</string>
</resources>
