<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.EventDetailsActivity"
    tools:showIn="@layout/activity_event_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/event_name_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/event_name_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/event_name"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/event_name_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/event_name_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin"
            android:clickable="true">

            <TextView
                android:id="@+id/location_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/location_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/location_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <TextView
                android:id="@+id/start_date_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_date"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/start_date_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_time_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin">

            <TextView
                android:id="@+id/start_time_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_time"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/start_time_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/start_time_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin">

            <TextView
                android:id="@+id/end_date_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/end_date"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/end_date_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/end_date_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/end_time_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin">

            <TextView
                android:id="@+id/end_time_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/end_time"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/end_time_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/end_time_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/description_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/form_horizontal_margin">

            <TextView
                android:id="@+id/description_label"
                android:layout_width="@dimen/text_view_length"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/description"
                android:textColor="@color/colorDarkPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/form_top_padding">

                <EditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/form_horizontal_margin"
                    android:layout_marginVertical="@dimen/form_vertical_margin"
                    android:layout_marginStart="@dimen/form_horizontal_margin"
                    android:background="@null"
                    android:inputType="textMultiLine"
                    android:lines="20"
                    android:minLines="2"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/description_view"
                    android:layout_width="@dimen/edit_text_length"
                    android:layout_height="@dimen/horizontal_divider_height"
                    android:layout_gravity="center"
                    android:background="@color/mediumGray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/form_padding">

            <TextView
                android:id="@+id/checked_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/check_in_success"
                android:textColor="@color/colorDarkPrimary"></TextView>

            <Button
                android:id="@+id/create_event_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/form_padding"
                android:text="@string/create_event_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/save_event_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/form_padding"
                android:text="@string/save_event_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/edit_event_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/form_padding"
                android:text="@string/edit_event_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/check_in_event_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:enabled="false"
                android:padding="@dimen/form_padding"
                android:text="@string/check_in_event_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/register_event_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/form_padding"
                android:text="@string/register_event_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/view_participant_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/form_padding"
                android:text="@string/view_participant_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
