<?xml version="1.0" encoding="utf-8"?><!-- A CardView that contains a TextView -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/cardRoot"
    card_view:cardCornerRadius="@dimen/card_radius">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            style="@style/cardTextLayout"
            android:background="@color/colorPrimary"
            android:paddingTop="@dimen/wide_padding">

            <TextView
                android:id="@+id/event_name"
                style="@style/boldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/event_start_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text" />
        </LinearLayout>

        <LinearLayout style="@style/cardTextLayout">

            <TextView
                android:id="@+id/description_label"
                style="@style/smallBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout style="@style/cardTextLayout">

            <TextView
                android:id="@+id/location_label"
                style="@style/smallBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_label" />

            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/cardTextLayout"
            android:paddingBottom="@dimen/wide_padding">

            <TextView
                android:id="@+id/end_date_label"
                style="@style/smallBoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_label" />

            <TextView
                android:id="@+id/event_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>